# 8080Emulator

./: .gitignore  8080Emulator.cpp  8080Emulator.sln  8080Emulator.vcxproj  CMakeLists.txt  README.md  i8080Disassembler.cpp  i8080Disassembler.h
8080/: 8080Emulator.cpp  8080Emulator.sln  8080Emulator.vcxproj  8080Emulator.vcxproj.filters  CPU.cpp  CPU.h  Display.cpp  Display.h  Keyboard.cpp  Keyboard.h  Main.cpp  i8080Disassembler.cpp  i8080Disassembler.h  i8080Emulator.cpp  i8080Emulator.h
8080/TempFiles/Debug/: 8080Emulator.exe.recipe  8080emulator.obj.enc  i8080disassembler.obj.enc  vc143.idb
8080/TempFiles/Debug/8080Emulator.tlog/: 8080Emulator.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
8080Emulator/: CMakeLists.txt
8080Emulator/8080/: CPU.cpp  ConsoleWindow.cpp  Display.cpp  i8080Emulator.cpp
GUIProj/: CMakeLists.txt  QtProj.ui  i8080GUI.cpp  i8080GUI.h  main.cpp
commonCodeProj/8080/: CPU.h  ConsoleWindow.h  Display.h  Keyboard.cpp  Keyboard.h  i8080Emulator.h
